[package]
name = "txDb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = {features = ["macros", "rt-multi-thread"], version = "1.17"}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bytes = "1.1.0"
lazy_static = "1.4.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"